[tool.poetry]
authors = ["Pr0curo"]
description = ""
license = "MIT"
name = "pric"
version = "0.1.0"

[tool.poetry.dependencies]
flask = "^2.2.2"
python = "^3.10"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
